# radiosoma

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: coverage.yml  nightly-live.yml  publish_stable.yml  release-preview.yml  release_workflow.yml  repo-health.yml
docs/: api.md  converters.md  getting-started.md  index.md  transport.md
examples/: 01_quickstart.py  02_recent_tracks.py  03_stream_variants.py  04_to_mediavocab.py  05_variant_fanout.py  06_custom_session.py  find_station.py  list_stations.py  mediavocab_jazz.py
radiosoma/: __init__.py  converters.py  transport.py
test/: conftest.py  test_converter.py  test_coverage.py  test_import.py  test_somafm_vcr.py  test_transport.py
test/cassettes/test_somafm_vcr/: test_get_recent_tracks_returns_song_dicts.yaml  test_get_stations_groovesalad_present_with_streams.yaml  test_pls_stream_resolution.yaml  test_station_to_release_produces_mediavocab_release.yaml
